--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 		<div id="result"></div>
     </body>
-    <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="https://releases.jquery.com/git/jquery-git.min.js"></script>
     <script>
     	( function( $ ) {
 
